Arrays.asList used for cors parameters